[tool.poetry]
name = "asset-management-tasks"
version = "0.1.0"
description = ""
authors = ["Vladislav Belov"]
readme = "README.md"
packages = [{include = "asset_management_tasks"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
